--- a/assets/package.json
+++ b/assets/package.json
@@ -1,6 +1,9 @@
 {
   "repository": {},
   "description": " ",
+  "engines": {
+    "node": "14.x"
+  },
   "license": "MIT",
   "scripts": {
     "deploy": "webpack --mode production",
